# chess-dataset

./: Cargo.toml  Testgame.pgn
src/: main.rs
